# InfraredThermalImagingDriverAssist

./: CMakeLists.txt  README.md
CV_Test/: CMakeLists.txt  CV_test.cpp
Dataset/: train.py
MainCode/: CMakeLists.txt  main.cpp
MainTest/: CMakeLists.txt  main.cpp
test/: Goo.cpp
